log/build_2022-06-09_13-04-45/kalman_1d/stderr.log
  File "/home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d/teleport_service.py", line 52
    except rospy.ServiceException, e:
                                 ^
SyntaxError: invalid syntax

  File "/home/andrepadilha/kalman_ws/install/kalman_1d/lib/python3.8/site-packages/kalman_1d/teleport_service (copy).py", line 52
    except rospy.ServiceException, e:
                                 ^
SyntaxError: invalid syntax

